--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.css
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.css
@@ -12,6 +12,13 @@ h3 {
   font-size: 2.5rem;
 }
 
+
+a {
+  position: absolute;
+  top: 3vh;
+  left: 3vh
+}
+
 form {
   display: flex;
   flex-direction: column;
