--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
@@ -1,35 +1,37 @@
 <section>
+  <a href="/"><p> <b><</b> Page d'accueil</p></a>
+
   <h3> Créer un compte</h3>
   <form #form="ngForm" (submit)="onSubmit(form)">
     <label for="nom">Veuillez entrer votre Nom</label>
     <input type="text" name="nom" id="inscriptionNom"
-    #nom="ngModel"
-    [(ngModel)]="service.FormData.Nom"
-    required />
+           #nom="ngModel"
+           [(ngModel)]="service.FormData.Nom"
+           required />
 
     <label for="prenom">Veuillez entrer votre Prenom</label>
-    <input type="text" name="prenom" id="inscriptionPrenom"     
-    #prenom="ngModel"
-    [(ngModel)]="service.FormData.Prenom" 
-    required />
+    <input type="text" name="prenom" id="inscriptionPrenom"
+           #prenom="ngModel"
+           [(ngModel)]="service.FormData.Prenom"
+           required />
 
     <label for="mail">Veuillez entrer votre Adresse Mail</label>
-    <input type="email" name="mail" id="inscriptionMail" 
-    #mail="ngModel"
-    [(ngModel)]="service.FormData.Mail"
-    required />
+    <input type="email" name="mail" id="inscriptionMail"
+           #mail="ngModel"
+           [(ngModel)]="service.FormData.Mail"
+           required />
 
     <label for="telephone">Veuillez entrer votre numéro de telephone</label>
-    <input type="email" name="telephone" id="inscriptionMail" 
-    #telephone="ngModel"
-    [(ngModel)]="service.FormData.Telephone"
-    required />
+    <input type="email" name="telephone" id="inscriptionMail"
+           #telephone="ngModel"
+           [(ngModel)]="service.FormData.Telephone"
+           required />
 
     <label for="motDePasse">Veuillez entrer un Mot de Passe</label>
-    <input type="password" name="motDePasse" id="inscriptionMotdePasse" 
-    #motDePasse="ngModel"
-    [(ngModel)]="service.FormData.MotDePasse"
-    minlength="8"  required />
+    <input type="password" name="motDePasse" id="inscriptionMotdePasse"
+           #motDePasse="ngModel"
+           [(ngModel)]="service.FormData.MotDePasse"
+           minlength="8" required />
 
     <!--<section class="messageCache">
       <h4>le mot de passe doit contenir : </h4>
