--- a/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
+++ b/FrontMarcheEtDevenir/src/app/page-inscription-connection/formulaire-inscription/formulaire-inscription.component.html
@@ -1,49 +1,67 @@
 <section>
   <h3> Créer un compte</h3>
-  <form #form="ngForm" (submit)="onSubmit(form)">
+  <form #form="ngForm"  (submit)="onSubmit(form)">
     <label for="nom">Veuillez entrer votre Nom</label>
-    <input type="text" name="nom" id="inscriptionNom"
+    <input type="text" 
+    name="nom" 
+    id="inscriptionNom"
+    placeholder="Petit"
     #nom="ngModel"
+    
     [(ngModel)]="service.FormData.Nom"
     required />
 
     <label for="prenom">Veuillez entrer votre Prenom</label>
-    <input type="text" name="prenom" id="inscriptionPrenom"     
+    <input type="text" 
+    name="prenom" 
+    id="inscriptionPrenom"
+    placeholder="Jean"     
     #prenom="ngModel"
     [(ngModel)]="service.FormData.Prenom" 
     required />
 
     <label for="mail">Veuillez entrer votre Adresse Mail</label>
-    <input type="email" name="mail" id="inscriptionMail" 
+    <input type="email" 
+    name="mail" 
+    id="inscriptionMail"
+    placeholder="jean@mail.com" 
     #mail="ngModel"
     [(ngModel)]="service.FormData.Mail"
     required />
 
     <label for="telephone">Veuillez entrer votre numéro de telephone</label>
-    <input type="email" name="telephone" id="inscriptionMail" 
+    <input type="tel" name="telephone" 
+    id="inscriptionTelephone"
+    placeholder="0707070707" 
     #telephone="ngModel"
     [(ngModel)]="service.FormData.Telephone"
+    minlength="10"
+    maxlength="10"
+    
     required />
 
     <label for="motDePasse">Veuillez entrer un Mot de Passe</label>
-    <input type="password" name="motDePasse" id="inscriptionMotdePasse" 
+    <input type="password" 
+    name="motDePasse" 
+    id="inscriptionMotdePasse" 
+    placeholder="votre mot de passe"
     #motDePasse="ngModel"
+    
     [(ngModel)]="service.FormData.MotDePasse"
-    minlength="8"  required />
-
-    <section class="messageCache">
-      <h4>le mot de passe doit contenir : </h4>
-      <p class="messageCache"> au moins une <b>minuscule</b> </p>
-      <p class="messageCache"> au moins une <b>majuscule</b> </p>
-      <p class="messageCache"> au moins un <b>chiffre</b> </p>
-      <p class="messageCache"> au moins un <b>caractère spécial</b> </p>
-      <p class="messageCache"> au moins  <b>8 charactères</b> </p>
-    </section>
-
+    minlength="8"
+    maxlength="16"
+    required />
 
     <label for="inscriptionConfirmationMotdePasse">Veuillez confirmer votre Mot de Passe</label>
-    <input type="password" name="inscriptionConfirmationMotdePasse" id="inscriptionConfirmationMotdePasse" required />
+    <input type="password" 
+    name="inscriptionConfirmationMotdePasse" 
+    id="inscriptionConfirmationMotdePasse"
+    placeholder="répéter votre mot de passe" 
+    minlength="8"
+    maxlength="16"
+    
+    required />
 
-    <input type="submit" value="Creer un compte" />
+    <input type="submit" value="Creer un compte" class="BouttonEnvoie"/>
   </form>
 </section>
